@@ -10,6 +10,8 @@
 VERSION 5.3.2 (Feb 3, 2003)
 ===========================
 
+  * FIXED/ADDED: Merged win_shell issues from main branch
+
   * ADDED: CHR library by Tom Schrijvers and Christian Holzbaur.  Thanks!
 
   * ADDED: Support for cyclic terms in ==/2, @>/2, etc.
